# ergo-indexer-rust

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml
.github/workflows/: ts.yml
api/: .env.example  README.md  app.ts  deno.jsonc  deps.ts  package-lock.json  package.json
api/common/: config.ts  constant.ts
api/controllers/: controllers.ts  infoController.ts
api/middlewares/: error.middleware.ts  logger.middleware.ts  middlewares.ts  request-id.middleware.ts  request-validator.middleware.ts  timing.middleware.ts
api/repositories/: blockInfo.ts  header.ts  repositories.ts  transaction.ts
api/repositories/db/: db.ts
api/routes/: routes.ts
api/services/: InfoService.ts  services.ts  statsService.ts
api/types/core/: context.ts
api/types/indexer/: common.ts  header.ts  info.ts
setup/: setup.sh
setup/db/: db.sql
src/: lib.rs
src/common/: mod.rs
src/config/: defaults.rs  mod.rs
src/database/: mod.rs
src/database/models/: ad_proof.rs  asset.rs  block_extension.rs  block_stats.rs  box_register.rs  data_input.rs  flat_block.rs  header.rs  input.rs  mod.rs  output.rs  script_constant.rs  token.rs  transaction.rs
src/network/: mod.rs
src/network/models/: api_block_transactions.rs  api_data_input.rs  api_full_block.rs  api_header.rs  api_input.rs  api_node_info.rs  api_node_info_epoch_parameters.rs  api_output.rs  api_spending_proof.rs  (+2 more)
src/repo/: ad_proofs.rs  asset.rs  block_extension.rs  block_info.rs  box_register.rs  data_input.rs  header.rs  input.rs  mod.rs  output.rs  script_constants.rs  token.rs  transaction.rs
