[package]
name = "ergo-indexer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }

[[bin]]
path = "bin/indexer.rs"
name = "indexer"
