[package]
name = "ergo-indexer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
log = "0.4"
simple_logger = "4.0.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
jsonrpsee = { version = "0.16", features = ["macros", "server"] }
jsonrpsee-http-client = "0.16"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-recursion = "1.0.4"
bigdecimal = "0.3.0"

[[bin]]
path = "bin/indexer.rs"
name = "indexer"
